[package]
name = "proxee"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "proxee"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["client", "tcp", "http1", "server"] }
clap = { version = "3.1.2", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
futures = "0.3.5"
regex = "1.5.4"
indexmap = { version = "1.8.0", features = ["serde"] }
colored = "2"
rcgen = "0.9.2"
tls-listener = { version = "0.4.0", features = ["hyper-h1", "rustls"] }
tokio-rustls = "0.23.2"
rustls-pemfile = "0.3.0"